slatedb/testdata/snapshots/slatedb__block__tests__test_block.snap
---
source: slatedb/src/block.rs
assertion_line: 366
expression: "(block.size(), block.data, block.restarts)"
---
(
    126,
    b"\0\0\0\x04key1\0\0\0\0\0\0\0\0\x06\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x06value1\0\x04\0\0\0\0\0\0\0\0\0\0\x06\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x06value1\0\x03\0\x012\0\0\0\0\0\0\0\0\x06\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x06value2",
    [
        0,
    ],
)
